--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="Mod.css">
-</head>
-<body>
+    <link rel="stylesheet" href="Mod.css" />
+  </head>
+  <body>
     <div class="flex-container">
-        <div class="Header"><p>Front End Quiz 1</p></div>
-        <div class="Horizontal">
-            <div class="head_Left_page"><p class="p2">Left Page</p>
-                <div class="Left_page"><a href="https://www.google.com/" target="_blank">Page 1</a></div>
-                <div class="Left_page"><a href="https://www.google.com/" target="_blank">Page 2</a></div>
-                <div class="Left_page"><a href="https://www.google.com/" target="_blank">Page 3</a></div>
-                <div class="Left_page"><a href="https://www.google.com/" target="_blank">Page 4</a></div>
-                </div>
-            <div class="head_Middle_page"><p class="p1">Body Page</p>
-                <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam numquam magni incidunt aliquid voluptas assumenda quibusdam ratione nisi ducimus. Minima enim distinctio fuga eaque dolor totam ex, eligendi accusamus eveniet.</div>
-            </div>
-            <div class="head_Right_page"><p class="p2">Right page</p>
-                <div><img src="Resorce/blank-profile-picture-973460_1280.png" width="350px" height="350px"></div>
-            </div>
-            </div>
-        <div class="footer"><p style="color: white;">Footer</p></div>
+      <div class="Header"><p>Front End Quiz 1</p></div>
+      <div class="Horizontal">
+        <div class="head_Left_page">
+          <p class="p2">Left Page</p>
+          <div class="Left_page">
+            <a href="https://www.google.com/" target="_blank">Page 1</a>
+          </div>
+          <div class="Left_page">
+            <a href="https://www.google.com/" target="_blank">Page 2</a>
+          </div>
+          <div class="Left_page">
+            <a href="https://www.google.com/" target="_blank">Page 3</a>
+          </div>
+          <div class="Left_page">
+            <a href="https://www.google.com/" target="_blank">Page 4</a>
+          </div>
+        </div>
+        <div class="head_Middle_page">
+          <p class="p1">Body Page</p>
+          <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+            numquam magni incidunt aliquid voluptas assumenda quibusdam ratione
+            nisi ducimus. Minima enim distinctio fuga eaque dolor totam ex,
+            eligendi accusamus eveniet.
+          </div>
+        </div>
+        <div class="head_Right_page">
+          <p class="p2">Right page</p>
+          <div>
+            <img
+              src="Resorce/blank-profile-picture-973460_1280.png"
+              width="350px"
+              height="350px"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="footer"><p style="color: white">Footer</p></div>
     </div>
-</body>
+  </body>
 </html>
